cabal-version:       3.0
name:                withings-weights
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Compute Withings week's average weight
description:         Compute Withings week's average weight.
Homepage:            http://github.com/blackheaven/withings-weights

executable withings-weights
  -- type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: app
  other-modules:
    Weights
    -- State
    Oauth
    -- Config
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , aeson
    , bytestring
    , containers
    , directory
    , envparse
    , http-client
    , http-client-tls
    , http-media
    , lens
    , lens-aeson
    , mtl
    , pretty-show
    , prometheus-client
    , prometheus-metrics-ghc
    , servant
    , servant-prometheus
    , servant-server
    , text
    , time
    , uri-encode
    , wai
    , wai-middleware-prometheus
    , warp
    , wreq
  default-language: Haskell2010
